--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,9 @@ body{
   .homeRow{
     margin-top: -78px;
   }
-  .ads img{
+  /* .ads img{
     height: 206px;
-  }
+  } */
   .biglinks{
     overflow: hidden;
   }
