--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,8 +1,8 @@
 /* nav bar */
 .header{
     background-color: #131921;
- 
     display: flex;
+    justify-content: center;
     align-items: center;
     height: 68px;
     z-index: 100;
@@ -58,3 +58,9 @@ flex:1;
     margin-left: 10px;
     margin-right: 10px;
 }
+
+@media screen and (max-width:500px) {
+        .header .search{
+            display:none !important;
+        }
+      }
