--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -17,9 +17,9 @@
 .homeRow{
     display: flex;
     z-index: 1;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-top: -275px;
+    /* margin-left: 5px;
+    margin-right: 5px; */
+    margin-top: -14%;
     justify-content: space-evenly;
     height: 100%;
     flex-wrap: wrap;
@@ -30,7 +30,7 @@
     justify-content: space-evenly;
     align-items: center;
     width: 328px;
-    height: 423px;
+    
 
 }
 .ads img{
@@ -61,5 +61,5 @@ margin-right: 7px;
 }
 /* swiper */
 .swiper-button-prev , .swiper-button-next {
-    top: 159px !important;
+    top: 50% !important;
 }
